# client-installer-v2

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  styles.css  tsconfig.json
public/: fonts.css
public-src/: font-slice.ts
public/imgs/: svgo.config.mjs
src/: app.rs  components.rs  languages.rs  lib.rs  pages.rs  shared.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: window.json
src-tauri/src/: main.rs
src-tauri/src/commands/: window.rs
src/components/: aside.rs  button.rs  logo.rs  menu_list.rs  menu_list_item.rs  menu_list_item_context.rs  raw.rs  separator.rs  titlebar.rs
src/languages/: lang.rs  profile.rs  translations.rs
src/languages/lang/: manifest.toml
src/languages/profile/: en_us.toml  zh_hans.toml
src/languages/translations/: en_us.toml  zh_hans.toml
src/locale/: i18n.rs
src/locale/translations/: zh_hans.toml
src/pages/: language.rs  menu.rs  router.rs
src/shared/: app.rs  global_state.rs
src/utils/: app.rs  app_test.rs  locale.rs  locale_test.rs
