[package]
name = "client-installer-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
stylist = { version = "0.13.0", features = ["yew"] }
gloo = "0.11.0"
yew-router = "0.18.0"
toml = "0.8.19"
anyhow = "1.0.86"

[workspace]
members = ["src-tauri"]
